# hs-d365fo-license-optimizer

./: .gitignore  CLAUDE.md  D365-FO-License-Agent-Sales-Deck.pptx  IMPLEMENTATION_STATUS.md  LOCAL_DEVELOPMENT_STRATEGY.md  MERGE_PHASE2_INSTRUCTIONS.md  NEXT_STEPS.md  PRODUCTION_WEB_APP_ROADMAP.md  PROJECT_STATUS.md  PROJECT_STATUS_REPORT.md  README.md  WEB_APP_SHOWSTOPPER_ANALYSIS.md  create_sales_deck.py
apps/agent/: ALGORITHM_MANIFEST.json  MANIFEST.md  MANIFEST.template.md  NEXT_STEPS.md  README.md  pyproject.toml
apps/agent/data/config/: sod_matrix.json
apps/agent/scripts/: check_algorithm_completeness.py
apps/agent/src/: __init__.py
apps/agent/src/algorithms/: __init__.py  algorithm_1_1_role_composition_analyzer.py  (+33 more)
apps/agent/tests/: __init__.py  test_algorithm_1_1.py  test_algorithm_1_2.py  test_algorithm_1_3.py  test_algorithm_1_4.py  test_algorithm_2_1.py  test_algorithm_2_2.py  test_algorithm_2_3.py  test_algorithm_2_4.py  test_algorithm_2_5.py  test_algorithm_2_6.py  test_algorithm_3_1.py  test_algorithm_3_2.py  test_algorithm_3_3.py  test_algorithm_3_4.py  test_algorithm_3_5.py  test_algorithm_3_6.py  test_algorithm_3_7.py  test_algorithm_3_8.py  test_algorithm_3_9.py  test_algorithm_4_1.py  test_algorithm_4_2.py  test_algorithm_4_3.py  test_algorithm_4_7.py  test_algorithm_5_1.py  test_algorithm_5_2.py  test_algorithm_5_3.py  test_algorithm_5_4.py  test_algorithm_6_1.py  test_algorithm_6_2.py  test_algorithm_6_3.py  test_algorithm_6_4.py  test_algorithm_7_1.py  test_algorithm_7_2.py  test_algorithm_7_4.py  test_pricing_utils.py
(+185 files in other folders)
